Menge editierbar, Warenkorb angepasst